--- a/app/globals.css
+++ b/app/globals.css
@@ -114,7 +114,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 1.75em;
+  gap: 1.25em;
 }
 .logo img {
   width: 120px;
@@ -191,7 +191,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 1.75em;
+  gap: 0.85em;
 }
 .home__nav__links,
 .home__nav__menu {
@@ -237,13 +237,20 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 0.75em;
-  font-size: 1.05em;
-  font-weight: 700;
+  gap: 0.85em;
   background-color: transparent;
   border: none;
   color: #ffffff;
   cursor: pointer;
+}
+.cart__amount {
+  font-weight: bold;
+  font-size: 0.85em;
+}
+.cart__icon,
+.user__icon,
+.menu__icon {
+  font-size: 1.05em;
 }
 /*mobile header*/
 .mobile__header {
@@ -270,7 +277,14 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 1.75em;
+  gap: 1.25em;
+}
+.mobile__header__cart__link,
+.header__cart__link {
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  gap: 0.85em;
 }
 .mobile__header__primary__section .menu__btn {
   display: flex;
@@ -279,13 +293,8 @@ a {
   border: none;
   color: #000000;
   cursor: pointer;
-  font-size: 1.15em;
   background-color: transparent;
   transition: all 0.3s ease;
-}
-.mobile__header__nav__link .cart__amount,
-.mobile__header__nav__link svg {
-  font-size: 1.15em;
 }
 .mobile__header__primary__section .menu__btn:hover {
   color: #0075be;
@@ -361,7 +370,7 @@ a {
 }
 /*hero*/
 .hero {
-  background-image: url("/app/images/home-new-bg-free-img.jpg");
+  background-image: url("https://websitedemos.net/brandstore-02/wp-content/uploads/sites/150/2019/12/home-new-bg-free-img.jpg");
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -385,17 +394,21 @@ a {
   z-index: 1;
 }
 .hero__content {
-  margin: 0 auto;
-  max-width: 1200px;
+  width: 100%;
   border-radius: 10px;
   z-index: 2;
+  padding: 0 1em;
+}
+.hero__banner {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 .hero__content h1 {
   font-size: 4em;
   margin-bottom: 20px;
 }
 
-.hero__content p {
+.hero__content h3 {
   font-weight: 700;
   font-size: 1.5em;
   margin-bottom: 40px;
@@ -433,9 +446,7 @@ a {
   .hero {
     height: 80vh;
   }
-  .hero__content {
-    padding: 0 1em;
-  }
+
   .hero__content h1 {
     font-size: 3em;
   }
@@ -444,11 +455,14 @@ a {
   .hero__content h1 {
     text-align: center;
   }
-  .hero__content p {
+  .hero__content h3 {
     font-size: 1.25em;
     text-align: center;
   }
   .cta__btns {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
     flex-wrap: wrap;
   }
@@ -598,16 +612,23 @@ a {
   flex-wrap: wrap;
   gap: 1em;
 }
-.featured__products__card {
+.featured__products__card,
+.products__card {
   width: calc(20% - 0.8em);
   transition: all 0.3s ease;
   margin: 1em 0;
   position: relative;
   overflow: hidden;
 }
+.products__card {
+  width: calc(33.33% - 0.8em);
+}
 .featured__products__card a {
   text-decoration: none;
   color: #000000;
+}
+.featured__products__card__content {
+  margin-top: 0.75em;
 }
 .featured__products__card__content a {
   text-decoration: none;
@@ -615,6 +636,7 @@ a {
 }
 .featured__products__card__content h4 {
   color: #000;
+  margin-bottom: 0;
 }
 .featured__products__card__content__cart {
   position: absolute;
@@ -744,6 +766,13 @@ form.product__search {
   margin-bottom: 4px;
   padding: 2px 0;
 }
+.product__categories ul li a {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 4px;
+  padding: 2px 0;
+}
 .bestSeller__container {
   gap: 2.5em;
   color: #000;
@@ -821,13 +850,13 @@ main .row {
   flex-wrap: wrap;
   gap: 1em;
 }
-.products__card {
+/* .products__card {
   width: calc(33.33% - 0.69em);
   transition: all 0.3s ease;
   margin: 1em 0;
   position: relative;
   overflow: hidden;
-}
+} */
 main form select {
   display: flex;
   align-items: center;
@@ -847,12 +876,13 @@ main form select {
   color: #000;
   background-color: transparent;
   border: 1px solid #000;
-  padding: 0.5em 1em;
+  padding: 0.75em 1.25em;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 14px;
   cursor: pointer;
+  transition: all 0.3s ease;
 }
 .pagination button:hover {
   background-color: #000;
@@ -1133,7 +1163,7 @@ p {
 /*about*/
 .about,
 .contact {
-  background-image: url("/src/assets/banner-04.jpg");
+  background-image: url("https://websitedemos.net/brandstore-02/wp-content/uploads/sites/150/2021/05/banner-04.jpg");
   background-size: cover;
   background-position: center;
   height: 70vh;
@@ -1146,7 +1176,7 @@ p {
   background-attachment: fixed;
 }
 .contact {
-  background-image: url("/src/assets/banner-06.jpg");
+  background-image: url("https://websitedemos.net/brandstore-02/wp-content/uploads/sites/150/2019/12/banner-06.jpg");
   height: 50vh;
 }
 .about::before,
