--- a/app/globals.css
+++ b/app/globals.css
@@ -55,6 +55,7 @@ a {
   cursor: pointer;
   text-transform: uppercase;
   font-weight: 700;
+  font-size: 14px;
 }
 .primary__btn:hover {
   background-color: #0075be;
@@ -513,14 +514,13 @@ a {
 .primary__footer__column {
   display: flex;
   flex-direction: column;
-  gap: 0.75em;
+  gap: 0.25em;
 }
 .primary__footer__column h4 {
-  font-weight: 700;
   text-align: center;
 }
 .primary__footer__column__heading {
-  font-weight: 700;
+  font-weight: 500;
   font-size: 1.25em;
   margin-bottom: 0.5em;
 }
@@ -540,7 +540,8 @@ a {
 }
 .primary__footer__column form input {
   border: 1px solid #dddddd;
-  padding: 1em;
+  padding: 0.75em;
+  font-size: 14px;
 }
 .primary__footer__column form input:focus {
   border: 1px solid #0075be;
@@ -562,7 +563,7 @@ a {
   text-decoration: none;
   color: #000000;
   transition: all 0.3s ease;
-  font-size: 1.15em;
+  font-size: 1.25em;
 }
 .footer__social__links a:hover {
   color: #0084d6;
@@ -621,7 +622,7 @@ a {
   overflow: hidden;
 }
 .products__card {
-  width: calc(33.33% - 0.8em);
+  width: calc(25% - 0.8em);
 }
 .featured__products__card a {
   text-decoration: none;
@@ -814,7 +815,7 @@ form.product__search {
 main {
   width: 75%;
   background-color: #fff;
-  padding: 5em;
+  padding: 2.5em 5em;
 }
 main .breadcrumbs {
   color: #777;
@@ -1272,6 +1273,9 @@ p {
   }
 }
 @media (max-width: 500px) {
+  .cart__drawer {
+    width: 80%;
+  }
   .about__section__info {
     padding: 3em 1.25em;
   }
