--- a/app/globals.css
+++ b/app/globals.css
@@ -79,6 +79,10 @@ input {
   padding: 8px 10px;
   font-size: 16px;
 }
+a:focus,
+button:focus {
+  outline: 2px dotted #0084d6;
+}
 .primary__btn {
   color: #fff;
   background-color: #0084d6;
@@ -139,7 +143,7 @@ input {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 1.75em;
+  gap: 1.25em;
   padding: 0.5em 0;
 }
 .home__nav__links a,
@@ -201,6 +205,9 @@ input {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   z-index: 3;
 }
@@ -224,6 +231,7 @@ input {
   align-items: center;
   justify-content: center;
   gap: 1.25em;
+  padding: 0.25em 0;
 }
 .logo img {
   width: 120px;
@@ -234,7 +242,7 @@ input {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 1.75em;
+  gap: 1.25em;
 }
 .nav__links a,
 .nav__menu a {
@@ -244,6 +252,7 @@ input {
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 500;
+  padding: 0.25em;
 }
 .nav__links a:hover,
 .nav__menu a:hover {
@@ -277,13 +286,16 @@ input {
   align-items: center;
   justify-content: center;
   width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .mobile__header__content {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: 14px;
+  padding: 18px 14px;
 }
 .logo {
   display: flex;
@@ -729,8 +741,8 @@ input {
 .container {
   display: flex;
   max-width: 1380px;
-  margin: 0 auto;
-  padding: 60px 20px;
+  margin: 60px auto 0;
+  padding: 90px 20px;
   gap: 2.75em;
 }
 aside.filters__container {
@@ -917,6 +929,7 @@ main form select {
 }
 @media (max-width: 1024px) {
   .container {
+    padding-top: 60px;
     flex-direction: column-reverse;
   }
   .single__product__container {
