--- a/app/globals.css
+++ b/app/globals.css
@@ -79,10 +79,6 @@ input {
   padding: 8px 10px;
   font-size: 16px;
 }
-a:focus,
-button:focus {
-  outline: 2px dotted #0084d6;
-}
 .primary__btn {
   color: #fff;
   background-color: #0084d6;
@@ -100,6 +96,8 @@ button:focus {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: all 0.3s ease;
+  padding: 10px 20px;
 }
 .heading__border {
   background-color: #0084d6;
@@ -983,6 +981,7 @@ main form select {
   visibility: hidden;
   opacity: 0;
   transition: opacity 0.3s ease;
+  height: 100vh;
 }
 .cart__drawer__overlay.active {
   opacity: 1;
@@ -999,8 +998,8 @@ main form select {
   right: -450px;
   transition: all 0.3s ease;
   z-index: 999;
-  overflow-y: scroll;
-  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 .cart__drawer.active {
   right: 0;
@@ -1012,9 +1011,9 @@ main form select {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* padding: 0.75em; */
+  padding: 0.75em;
 }
-.cart__drawer__header h3 {
+.cart__drawer__header h4 {
   color: #333;
   margin: 0;
 }
@@ -1026,23 +1025,28 @@ main form select {
   border: none;
   cursor: pointer;
   transition: all 0.3s ease;
+  font-size: 16px;
+  padding: 0;
 }
 .cart__drawer__header button:hover {
   color: #0084d6;
   transition: all 0.3s ease;
 }
 .cart__drawer__content {
-  /* padding: 0.75em; */
-  overflow-y: auto;
+  height: calc(100vh - 52.8px - 174.38px);
+  display: flex;
+  flex-direction: column;
+  gap: 0.75em;
+  padding: 0.75em;
 }
 .cart__drawer__footer {
-  position: absolute;
-  bottom: 0em;
   width: 100%;
 }
-.cart__drawer__subtotal h3,
-.cart__drawer__subtotal p {
+.cart__drawer__subtotal h4 {
   margin: 0;
+}
+.cart__total {
+  font-weight: 500;
 }
 .cart__drawer__btns {
   flex-direction: column;
@@ -1056,10 +1060,11 @@ main form select {
   align-items: center;
   gap: 0.5em;
   justify-content: space-between;
+  width: 100%;
 }
 .cart__drawer__content__entry__left {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   gap: 0.5em;
 }
 .cart__drawer__content__entry__img img {
@@ -1067,7 +1072,7 @@ main form select {
   height: 70px;
   object-fit: cover;
 }
-.cart__drawer__content__entry__info h4 {
+.cart__drawer__content__entry__info h5 {
   margin: 0;
 }
 .cart__drawer__content__entry__info span {
@@ -1082,10 +1087,10 @@ main form select {
   cursor: pointer;
   transition: all 0.3s ease;
   border-radius: 999px;
-  /* padding: 0.15em; */
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0.25em;
 }
 .cart__drawer__content__entry__right button svg {
   color: #666;
